# iir-filter-evaluator

./: .clang-format  .gitmodules  CMakeLists.txt  README.md
src/: CMakeLists.txt  PluginProcessor.cpp  PluginProcessor.h
src/jsui/: package-lock.json  package.json
src/jsui/src/: App.js  ParameterCoefficient.js  ParameterToggleButton.js  ParameterValueContext.js  TransferFunction.js
